# IVC

./: .gitignore  ColorSpaceConversion.py  ContextModeler.py  Decoder.py  Encoder.py  EntropyDecoder.py  EntropyEncoder.py  EntropyIntegrationTest.py  IBitstream.py  IntraPredictionCalculator.py  OBitstream.py  PredictionCalculator.py  README.md  arithBase.py  arithDecoder.py  arithEncoder.py  comparison_MPEG2_HEVC.py  dct.py  decode.py  encode.py  entropy_decoder.py  exponential-golomb-coding.py  main.py  requirements.txt  test.py  test_exam_color.py  test_video.py
.github/workflows/: autotodo.yaml
A01/: A01.sh
A01/pgm/: Berlin100_rec.pgm  Berlin10_rec.pgm  Berlin1_rec.pgm  Berlin50_rec.pgm  Berlin_transcoded.pgm  Castle.pgm  Walrus.pgm  kodim02.pgm  kodim03.pgm  kodim04.pgm  kodim07.pgm  kodim10.pgm  kodim13.pgm  kodim15.pgm  kodim19.pgm  kodim21.pgm  kodim22.pgm  kodim23.pgm
A01/psnr/: PSNR_Berlin
A02/: Decoder.py  Encoder.py  main.py
data/images/pgm/: Puffin.pgm  kodim05.pgm  kodim08.pgm  kodim14.pgm  kodim16.pgm  kodim17.pgm  kodim20.pgm
data/images/ppm/: kodim06.ppm  kodim13.ppm  kodim14.ppm  kodim16.ppm  kodim18.ppm
exam_task/: notes.md
images/encoded/ppm/: Berlin.411.ivc21  Berlin.411b.ivc21  Berlin.420.ivc21  Berlin.444.ivc21  Berlin.RGB.ivc21  Berlin.ivc21  Berlin.pgm.ivc21  Berlin.ppm.411.ivc21  Berlin.ppm.420.ivc21  Berlin.ppm.422.ivc21  Berlin.ppm.444.ivc21  Berlin.ppm.ivc21
images/org/ppm/: kodim08.ppm  kodim17.ppm  kodim22.ppm
images/transcoded/: Berlin.pgm
ivc/: psnr.py
org/pgm/: kodim09.pgm  kodim11.pgm  kodim12.pgm  kodim18.pgm  kodim24.pgm
org/ppm/: Puffin.ppm  kodim09.ppm  kodim12.ppm  kodim15.ppm  kodim19.ppm
scripts/: README.md  encode.sh  test-JPEG-HEVC.sh
tests/: psnr.py
tools/psnr-images/: CMakeLists.txt  README.md
tools/psnr-images/src/: image.cpp  image.h  main.cpp
tools/psnr-raw-video/: CMakeLists.txt  Makefile  README.md
tools/psnr-raw-video/src/: Common.h  Config.cpp  Config.h  Distortion.cpp  Distortion.h  Frame.cpp  Frame.h  PSNRCalc.cpp  PSNRCalc.h  main.cpp
